# zsasa

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.ja.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build.zig  build.zig.zon  flake.nix  install.sh  mkdocs.yml  plan.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-windows.yml  ci.yml  ci.yml.disabled  docs.yml  publish.yml
benchmarks/: .gitignore
benchmarks/ecoli_bench/: README.md  benchmark.sh  run_all.sh
benchmarks/inputs/: 1a0q.json  1aon.json  1crn.json  1ubq.json  3hhb.json
benchmarks/inputs_json/: 1a0q.json  1aon.json  1crn.json  1ubq.json  3hhb.json
benchmarks/inputs_protor/: 1a0q.json  1aon.json  1crn.json  1ubq.json  3hhb.json
benchmarks/references/: 1a0q_n100_p1.4.json  1aon_n100_p1.4.json  1crn_n100_p1.4.json  1ubq_n100_p1.4.json  3hhb_n100_p1.4.json  4v6x_n100_p1.4.json
benchmarks/results/: config.yaml
benchmarks/scripts/: analyze.py  analyze_batch.py  analyze_data.py  analyze_lr.py  analyze_md.py  analyze_plots.py  batch_bench.py  bench.py  bench_adaptive.py  bench_batch.py  bench_common.py  bench_lr.py  bench_md.py  bench_md_runner.py  bench_python.py  benchmark_md.py  benchmark_sasa.py  benchmark_xtc_readers.py  build_index.py  compare_parallelism.py  freesasa_batch.sh  generate_json.py  generate_pdb.py  ipc.py  plot_distribution.py  run.py  run_all.sh  run_batch.py  sample.py  validation.py  validation_md.py
docs/: README.md  algorithm.md  architecture.md  benchmark-results.md  benchmark.md  ci.md  classifier.md  cli-io.md  cli.md  cpu-efficiency.md  optimizations.md  parser-optimizations.md  python.md  xtc.md
docs/benchmark/: batch.md  ecoli-proteome.md  md.md  methodology.md  results.md  results.md.template  single-file.md  single-file.md.template  validation.md
docs/ja/: README.md  algorithm.md  architecture.md  ci.md  classifier.md  cli.md  cpu-efficiency.md  optimizations.md  python.md
docs/plans/: 2026-02-22-fuzz-testing-design.md  2026-02-22-fuzz-testing.md  2026-02-22-toml-classifier-design.md  2026-02-22-toml-classifier.md
docs/python-api/: README.md  analysis.md  classifier.md  core.md
docs/zig-api/: README.md  algorithms.md  analysis.md  autodoc.md  classifier.md  parsers.md  types.md
examples/: 1A0Q_sasa.json  README.md  input_1a0q.json
packaging/aur/: .SRCINFO  PKGBUILD
plans/: ancient-waddling-marble.md  deep-growing-gosling.md  docs-restructure-overview.md  docs-restructure-phase1-readme.md  docs-restructure-phase2-cli-docs.md  docs-restructure-phase3-python-docs.md  docs-restructure-phase4-existing-docs.md  docs-restructure-phase5-changelog.md  docs-restructure-phase6-japanese.md  future-batch-parallel.md  gleaming-cuddling-ritchie.md  golden-percolating-widget.md  indexed-booping-spring.md  mdtraj-integration.md  nifty-knitting-token.md  pdb-parser-implementation.md  phase-1-batch-zig.md  phase-1-hydrogen-hetatm-filter.md  phase-1-md-docs-update.md  phase-1-release-prep.md  phase-1-shrake-rupley.md  phase-10-mmcif-input.md  phase-11-lee-richards.md  phase-13-python-bindings.md  phase-14-wasm.md  phase-15-chain-support.md  phase-16-analysis-features.md  phase-17-json-benchmark.md  phase-17-output-formats.md  phase-17.4-benchmark-redesign.md  phase-18-test-pipeline.md  phase-2-batch-rust.md  phase-2-release.md  phase-3-joss-paper.md  phase-4-multithreading.md  phase-5-production-features.md  phase-7-fair-benchmark.md  phase-8-benchmark-dataset.md  phase-9-radius-classifier.md  python-structure-parsing.md  (+4 more)
python/: README.md  hatch_build.py  pyproject.toml
python/examples/: README.md  basic_sasa.py  biopython_example.py  biotite_example.py  classifier.py  gemmi_example.py  mdanalysis_example.py  mdtraj_example.py
python/freesasa_zig/: __init__.py  analysis.py  core.py  mdanalysis.py  mdtraj.py
python/freesasa_zig/integrations/: __init__.py  _types.py  biopython.py  biotite.py  gemmi.py
python/tests/: test_analysis.py  test_batch.py  test_batch_dir.py  test_biopython_integration.py  test_biotite_integration.py  test_cli.py  test_dcd.py  test_ffi.py  test_gemmi_integration.py  test_integration_radii_policy.py  test_mdanalysis_integration.py  test_mdtraj_integration.py  test_real_structures.py  test_sasa.py  test_thread_stress.py  test_xtc.py
python/zsasa/: __init__.py  __main__.py  _ffi.py  analysis.py  batch.py  classifier.py  cli.py  core.py  dcd.py  mdanalysis.py  mdtraj.py  rsa.py  sasa.py  xtc.py
python/zsasa/integrations/: __init__.py  _types.py  biopython.py  biotite.py  gemmi.py
scripts/: benchmark.py  benchmark_all.py  benchmark_python.py  calc_reference_sasa.py  cif_to_input_json.py  compare_classifiers.py  convert_xtc_to_dcd.py  generate-python-docs.sh  generate_benchmark_data.py  generate_protor_inputs.py  pyproject.toml  quick_compare.py  release_bump.py  release_tag.py  test_release_tools.py  validate.py  validate_accuracy.py
scripts/data/: calc_reference.py  cif_to_json.py  cif_to_protor_json.py  generate.py  generate_benchmark_json.py  generate_protor.py
src/: altloc.zig  analysis.zig  batch.zig  batch_manifest.zig  bcif_parser.zig  bitmask_lut.zig  c_api.zig  calc.zig  ccd_binary.zig  ccd_parser.zig  cif_tokenizer.zig  classifier.zig  classifier_ccd.zig  classifier_naccess.zig  classifier_oons.zig  classifier_parser.zig  classifier_protor.zig  compile_dict.zig  compressed.zig  dcd.zig  element.zig  format_detect.zig  gzip.zig  hybridization.zig  json_parser.zig  json_writer.zig  lee_richards.zig  main.zig  mmap_reader.zig  mmcif_parser.zig  neighbor_list.zig  pdb_parser.zig  pipeline.zig  root.zig  sdf_parser.zig  shrake_rupley.zig  shrake_rupley_bitmask.zig  simd.zig  stream_writer.zig  test_points.zig  (+9 more)
test_data/: 1l2y.dcd  custom-classifier.toml  ethanol_v2000.sdf  ethanol_v3000.sdf  legacy-batch-manifest.toml  two_molecules.sdf  workflow-batch.toml  workflow-calc.toml
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+180 files in other folders)
