[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zsasa"
version = "0.1.0"
description = "Fast SASA calculation using Zig"
readme = "README.md"
license = "MIT"
authors = [{ name = "zsasa contributors" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = ["numpy>=1.24", "cffi>=1.15"]

[project.optional-dependencies]
biopython = ["biopython>=1.80"]
biotite = ["biotite>=1.0.0"]
gemmi = ["gemmi>=0.6.0"]
mdtraj = ["mdtraj>=1.9.0"]
mdanalysis = ["MDAnalysis>=2.0.0"]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.5", "ty>=0.0.1a0"]
all = [
    "zsasa[biopython]",
    "zsasa[biotite]",
    "zsasa[gemmi]",
    "zsasa[mdtraj]",
    "zsasa[mdanalysis]",
]

[project.urls]
Homepage = "https://github.com/N283T/zsasa"
Repository = "https://github.com/N283T/zsasa"

[tool.hatch.build.targets.wheel]
packages = ["zsasa"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ty.environment]
python-version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
