[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zsasa"
version = "0.1.0"
description = "Fast SASA calculation using Zig"
readme = "README.md"
license = "MIT"
authors = [{ name = "Tsubasa Nagae" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = ["numpy>=1.24", "cffi>=1.15"]

[project.optional-dependencies]
biopython = ["biopython>=1.80"]
biotite = ["biotite>=1.0.0"]
gemmi = ["gemmi>=0.6.0"]
mdtraj = ["mdtraj>=1.9.0"]
mdanalysis = ["MDAnalysis>=2.0.0"]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.5", "ty>=0.0.1a0"]
all = [
    "zsasa[biopython]",
    "zsasa[biotite]",
    "zsasa[gemmi]",
    "zsasa[mdtraj]",
    "zsasa[mdanalysis]",
]

[project.urls]
Homepage = "https://github.com/N283T/zsasa"
Repository = "https://github.com/N283T/zsasa"
Documentation = "https://github.com/N283T/zsasa#readme"
Issues = "https://github.com/N283T/zsasa/issues"
Changelog = "https://github.com/N283T/zsasa/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["zsasa"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ty.environment]
python-version = "3.11"

[tool.cibuildwheel]
build = ["cp311-*", "cp312-*", "cp313-*"]
skip = ["pp*", "*-win32", "*-win_arm64", "*-manylinux_i686", "*-musllinux_*", "*_s390x", "*_ppc64le"]
test-requires = ["pytest", "numpy"]
test-command = "pytest {project}/python/tests/test_sasa.py -x -q"

[tool.cibuildwheel.linux]
# Use manylinux_2_28 (glibc 2.28) containers to match Zig glibc target.
# Default manylinux2014 (glibc 2.17) is too old for our glibc 2.28 target.
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
# Install Zig via PyPI and build shared library once per platform.
# Uses python3/pip3 for manylinux container compatibility.
# Pin glibc 2.28 via Zig target to ensure manylinux_2_28 compatibility.
# $(uname -m) resolves to x86_64 or aarch64 depending on the runner.
before-all = "pip3 install ziglang && python3 -m ziglang build -Doptimize=ReleaseFast -Dtarget=$(uname -m)-linux-gnu.2.28"
# Default auditwheel repair adds manylinux_2_28 tag to wheels.
# Zig statically links everything except libc (manylinux-allowlisted),
# so auditwheel just retags without bundling external libs.

[tool.cibuildwheel.macos]
before-all = "pip3 install ziglang && python3 -m ziglang build -Doptimize=ReleaseFast"
# Skip delocate: libzsasa.dylib has no external dylib dependencies.
repair-wheel-command = ""

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
