[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zsasa"
version = "0.2.3"
description = "Fast SASA calculation using Zig"
readme = "README.md"
license = "MIT"
authors = [{ name = "Tsubasa Nagae" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = ["numpy>=1.24", "cffi>=1.15"]

[project.optional-dependencies]
biopython = ["biopython>=1.80"]
biotite = ["biotite>=1.0.0"]
gemmi = ["gemmi>=0.6.0"]
mdtraj = ["mdtraj>=1.9.0"]
mdanalysis = ["MDAnalysis>=2.0.0"]
dev = ["pytest>=8.0", "pytest-cov>=4.0", "ruff>=0.5", "ty>=0.0.1a0", "pdoc>=14.0"]
all = [
    "zsasa[biopython]",
    "zsasa[biotite]",
    "zsasa[gemmi]",
    "zsasa[mdtraj]",
    "zsasa[mdanalysis]",
]

[project.urls]
Homepage = "https://n283t.github.io/zsasa/"
Repository = "https://github.com/N283T/zsasa"
Documentation = "https://n283t.github.io/zsasa/"
Issues = "https://github.com/N283T/zsasa/issues"
Changelog = "https://github.com/N283T/zsasa/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["zsasa"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.ty.environment]
python-version = "3.11"

[tool.cibuildwheel]
build = ["cp311-*", "cp312-*", "cp313-*"]
skip = ["pp*", "*-win32", "*-win_arm64", "*-manylinux_i686", "*-musllinux_*", "*_s390x", "*_ppc64le"]
test-requires = ["pytest", "numpy"]
test-command = "pytest {project}/python/tests/test_sasa.py -x -q"

[tool.cibuildwheel.linux]
# Use manylinux_2_28 (glibc 2.28) containers to match Zig glibc target.
# Default manylinux2014 (glibc 2.17) is too old for our glibc 2.28 target.
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
# Download Zig directly from official release (avoids PyPI rate limits).
# $(uname -m) resolves to x86_64 or aarch64 depending on the runner.
before-all = "curl -sSfL https://ziglang.org/download/0.15.2/zig-$(uname -m)-linux-0.15.2.tar.xz | tar -xJ -C /usr/local && ln -sf /usr/local/zig-$(uname -m)-linux-0.15.2/zig /usr/local/bin/zig && zig build -Doptimize=ReleaseFast -Dtarget=$(uname -m)-linux-gnu.2.28"

[tool.cibuildwheel.macos]
# Zig installed by setup-zig action in workflow (not via PyPI).
before-all = "zig build -Doptimize=ReleaseFast"
# Skip delocate: libzsasa.dylib has no external dylib dependencies.
repair-wheel-command = ""

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "11.0"

[tool.cibuildwheel.windows]
# Zig installed by setup-zig action in workflow (not via PyPI).
before-all = "zig build -Doptimize=ReleaseFast"
# Skip delvewheel: Zig statically links everything, no external DLL dependencies.
repair-wheel-command = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
