[project]
name = "freesasa-zig-scripts"
version = "0.1.0"
description = "Development scripts for freesasa-zig"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "typer>=0.9.0",
    "freesasa>=2.0",
    "gemmi>=0.7.4",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty.environment]
python-version = "3.11"
